--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,7 +10,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background:black;
     --foreground: #ededed;
   }
 }
@@ -18,4 +19,11 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@font-face {
+  font-family: 'Abril';
+  src: url('/fonts/AbrilFatface-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
 }
