--- a/app/components/components.module.css
+++ b/app/components/components.module.css
@@ -102,8 +102,9 @@
 .MovieTitle{
   position: absolute;
   font-family: "Abril";
+  text-align: center;
   font-size: 26px;
-  left:200px;
+  left: 200px;
   top:10px;
 
 }
@@ -136,3 +137,195 @@
   left:450px;
   
 }
+
+
+.modal, .overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.overlay {
+  background: rgba(49,49,49,0.8);
+}
+.modal_box {
+  position: absolute;
+  width: 35%;
+  height: 68%;
+  top:12%;
+  left: 30%;
+  background-color: rgb(230, 230, 230);
+  border-radius: 30px;
+}
+.closemodal:hover{
+  border: black 1px solid;
+  color: black;
+}
+.closemodal{
+  position: absolute;
+  width: 40px;
+  color: grey;
+  height: 40px;
+  border-radius: 10px;
+  top: 15px;
+  right: 20px;
+  padding: 5px 7px;
+}
+.modal_content{
+  position: absolute;
+  width: 84%;
+  height: 84%;
+  border-radius: 30px;
+  top:9%;
+  left: 8%;
+  color: gray;
+  background-color: white;
+}
+
+body.active_modal {
+  overflow-y: hidden;
+}
+#loginheading,#signupheading{
+  position: absolute;
+  font-size: 30px;
+  width: 50%;
+  background-color:  rgb(240, 239, 239);
+  height: 10%;
+  top: 0%;
+  left: 0%;
+}
+#signupheading{
+  top: 0%;
+  left: 50%;
+}
+#userName,#passWord{
+  position: absolute;
+  top:120px;
+  padding: 3px 20px;
+  border-radius: 10px;
+  border: 1px solid rgb(214, 214, 214);
+  font-size: 25px;
+  left: 70px;
+  width: 420px;
+}
+#passWord{
+  top:200px;
+}
+#rememberMe{
+  position: absolute;
+  top:270px;
+  left: 75px;
+  width: 20px;
+  height: 20px;
+}
+#rememberMetext{
+  position: absolute;
+  top:267px;
+  left: 105px;
+  font-size: 18px;
+}
+#loginButton{
+  position: absolute;
+  top:320px;
+  width: 80%;
+  left: 10%;
+  height: 40px;
+  border-radius:30px;
+  border: 2px solid rgb(214, 214, 214);
+}
+#line{
+  position: absolute;
+  width: 80%;
+  left: 10%;
+  bottom:150px;
+  background-color: rgb(214, 214, 214);
+  height: 1px;
+}
+.topRow{
+  position: absolute;
+  top:250px;
+  left: 25%;
+  padding: 0;
+  margin: 40px;
+  list-style-type: none;
+  display: flex;
+}
+.topRow li{
+  margin-right: 40px;
+}
+#profileIcon{
+  border-radius: 50%;
+  width: 100%;
+  height: 100%; 
+  max-height: 165px;
+
+}
+.memberBox{
+  width: 165px;
+  height: 250px;
+
+}
+.memberUserName{
+  position: absolute;
+  bottom:-10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  position: relative;
+  text-align: center;
+}
+p#featuredMembers{
+  position: absolute;
+  left: -5%;
+  top:-70px;
+  color: white;   
+  font-size: 20px;
+  border-bottom: 1px gray solid;
+  width:110%;
+}
+p#reviewsandfilmsrated{
+  position: relative;
+  top:10px;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 13px;
+  color: white; 
+}
+.fav img{
+  width: 50px;
+  height: 80px;
+}
+.fav1{
+  position: relative;
+  left: -10px;
+  
+}
+.fav2{
+  position: relative;
+  left: 0px;
+}
+.fav3{
+  position: relative;
+  left: 10px;
+}
+.fav4{
+  position: relative;
+  width: 50px;
+  height: 80px;
+  left:20px;
+}
+.favMovies{
+  position: relative;
+  top:-20px;
+  width: 210px;
+  left: -40px;
+  padding: 0;
+  margin: 40px;
+  list-style-type: none;
+  display: flex;
+}
+.favMovies li{  
+  margin-right:-10px;}
