--- a/app/globals.css
+++ b/app/globals.css
@@ -20,10 +20,14 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-  
+
+body.active-modal {
+  overflow-y: hidden;
+}
 @font-face {
   font-family: 'Abril';
   src: url('/fonts/AbrilFatface-Regular.ttf');
   font-weight: normal;
   font-style: normal;
 }
+
