--- a/app/users/userstyle.module.css
+++ b/app/users/userstyle.module.css
@@ -100,6 +100,9 @@
     border-radius: 2px;
     padding-bottom: 8px;
 }
+.nohighlight{
+    border: 0px;
+}
 #profileButton{
     position: absolute;
     font-family: 'Courier New', Courier, monospace;   
