Beautified List Page And Added List Components

--- a/app/members/styles/members.module.css
+++ b/app/members/styles/members.module.css
@@ -56,3 +56,26 @@
     padding-left: 10px;
     border-bottom:  1px solid rgb(172, 171, 171);;
 }
+#pageController{
+    position: absolute;
+    left: 500px;
+    top:1740px;
+    width: 300px;
+    height: 90px;
+}
+#nextButton{
+    position: absolute;
+    left: 0px;
+    top:10px;
+}
+#prevButton{
+    position: absolute;
+    left: 100px;
+    top:10px;
+}
+.hide{
+    visibility: hidden;
+}
+.show{
+    visibility: visible;
+}
