--- a/app/lists/styles/lists.module.css
+++ b/app/lists/styles/lists.module.css
@@ -11,6 +11,11 @@
     display: flex;
     flex-wrap: wrap;
 }
+.moviePoster{
+    padding-top: 30px;
+    height: 250px;
+    
+}
 #all_movies li{
     margin-left: 20px;
 }
@@ -24,5 +29,5 @@
     width: 1150px; 
     padding-left: 10px;
     padding-bottom: 10px;
-    border-bottom:  1px solid rgb(172, 171, 171);;
+    border-bottom:  1px solid rgb(172, 171, 171);
 }
