--- a/app/components/components.module.css
+++ b/app/components/components.module.css
@@ -20,6 +20,50 @@
   border: 1px solid rgba(218, 202, 202, 0.3);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
+#searchResults{
+  position: fixed;
+  border-radius: 20px;
+  top:70px;
+  left: 960px;
+  width: 570px;
+  height:auto;
+  background-color:rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(218, 202, 202, 0.3);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+
+}
+.showResults{
+  display: block;
+}
+.hideResults{
+  display: none;
+}
+
+.resultCard{
+  position: relative;
+  border-radius: 30px;
+  height: 150px;
+  border: 1px solid rgba(218, 202, 202, 0.3);
+  padding-left: 14px;
+  top:10px;
+  padding-bottom: 5px;
+}
+.resultPoster{
+  top:10px;
+  position: relative;
+  border-radius: 30px;
+  width: 100px;
+  height: 130px;
+}
+.resultName{
+  position: relative;
+  font-family: "albia";
+  font-size: 20px;
+  top:-80px;
+  left: 140px;
+}
 #search_ico{
   position: absolute;
   top:33px;
