--- a/app/components/components.module.css
+++ b/app/components/components.module.css
@@ -9,11 +9,16 @@
   }
 #searchBar{
   position: fixed;
-  border-radius: 20px;
   top:25px;
-  left: 950px;
   width: 590px;
   height:45px;
+  left: 950px;
+}
+#searchBarInput{
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  padding:3px 15px;
   background-color:rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -21,12 +26,11 @@
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 #searchResults{
-  position: fixed;
+  position:absolute;
   border-radius: 20px;
-  top:70px;
   overflow: hidden;
-  left: 960px;
-  width: 570px;
+  width: 96%;
+  left: 10px;
   height:auto;
   background-color:rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
@@ -67,8 +71,8 @@
 }
 #search_ico{
   position: absolute;
-  top:33px;
-  right:380px;
+  top:8px;
+  right:17px;
 }
 
 #home_ico{
@@ -124,7 +128,7 @@
 }
 #profile{
   position: absolute;
-  left:1830px;
+  right:15px;
   top:20px;
 }
 .MovieCard:hover{
