--- a/app/movies/styles/movies.module.css
+++ b/app/movies/styles/movies.module.css
@@ -28,3 +28,22 @@
     padding-left: 10px;
     border-bottom:  1px solid rgb(172, 171, 171);;
 }
+
+#filter{
+    position:absolute;
+    border: 1px solid rgb(172, 171, 171);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    top:0px;
+    width: 80px;
+    right: 50px;
+    height: 35px;
+}
+.showFilter{
+    display: block;
+}
+.hideFilters{
+    display: none;
+}
