Added Following, And Added Updating Users

--- a/app/components/signup.module.css
+++ b/app/components/signup.module.css
@@ -46,6 +46,7 @@
     top:350px;
     width: 80%;
     left: 10%;
+    color: grey;
     height: 40px;
     border-radius:30px;
     border: 2px solid rgb(214, 214, 214);
