--- a/app/users/styles/profile.module.css
+++ b/app/users/styles/profile.module.css
@@ -120,3 +120,8 @@
     font-family: 'Courier New', Courier, monospace;
     left: 170px;
 }
+#pp{
+    position: absolute;
+    top:100px;
+    left: 100px;
+}
