--- a/app/movies/styles/movepage.module.css
+++ b/app/movies/styles/movepage.module.css
@@ -82,3 +82,41 @@
 .nohighlight{
     border: 0px;
 }
+#statsBox{
+    position: absolute;
+    right: 120px;
+    top:700px;
+    width: 350px;
+    height: 100px;
+    border:  1px solid rgb(131, 131, 131);;
+}
+#watchBox{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    left: 0px;
+}
+#watched{
+    position: absolute;
+    top:18px;
+}
+#watchedp{
+    position: absolute;
+    top:63px;
+}
+#favBox{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    left: 80px;
+}
+.show{
+    display: block;
+}
+.hide{
+    display: none;
+}
